learn ternary statement

--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
  	<meta name="author" content="John Doe">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
  	<link type="css/stylesheet" href="styles.css" />
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<title>Shopping List App</title>
 </head>
 <body>
 	<div id="shopping-list">
-		<h1>{{ header }}</h1>
-		<input type="text" v-model="header" />
+		<div class="container-fluid">
+			<br/>
+			<div class="card">
+				<div class="container-fluid p-lg-4 p-sm-2">
+					<!-- Shorthand If Statement otherwise known as ternary statement -->
+					<h1>{{ header ? header : 'Welcome' }}</h1>
+					<!-- <h1>{{ if(header) {return 'welcome'} }}</h1> -->
+					<input type="text" v-model="header" class="form-control" />
+				</div>
+			</div>
+		</div>
 	</div>
 
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/vue"></script>
 	<script>
 		var shoppingList = new Vue({
 			el: '#shopping-list',
 			data: {
-				header: 'Vue is ready to party'
+				header: null
 			}
 		});
 	</script>
