--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 						<button v-else class="btn btn-danger" @click="changeState('default')">Cancel</button>
 					</div>
 					<br/>
+					<a v-bind:href="newItem" target="_blank" >Dynamic URL</a>
+					<br/>
 					<div class="row">
 						<div class="col-md-12">
 							<p class="font-weight-bold">Party Need:</p>
