--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 								<div class="col-md-9">
 									<input type="text" v-model="newItem" class="form-control" placeholder="add new item ..." />
 								</div>
+								<p> {{ characterCount }} / 200 </p>
 								<button class="btn btn-primary" :disabled="newItem.length === 0" @click="saveItem()">Add Item</button>
 							</div>
 							<br/>
@@ -83,6 +84,11 @@
 						priority: true,
 					}
 				]
+			},
+			computed: {
+				characterCount() {
+					return this.newItem.length;
+				}
 			},
 			methods: {
 				saveItem: function(){
