add priority field in adding new item

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 					this.items.push({
 						label: this.newItem,
 						description: this.newItemDescription,
-						purchased: false
+						purchased: false,
+						priority: false
 					});
 					this.newItem = "";
 				},
