--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 						<h1>{{ header.toLocaleUpperCase() }}</h1>
 						<br/>
 					</div>
-					<br/>
 					<div class="row">
 						<div class="col-md-12">
-							<p class="font-weight-bold">Party Need:</p>
+							<p class="font-weight-bold">Add Party Need:</p>
 							
 							<div class="form-row" v-if="state === 'edit'">
 								<div class="col-md-8">
@@ -40,7 +39,7 @@
 
 							<br/>
 
-							<p class="text-success" v-if="items.length ===0">You bought all items in the list</p>
+							<h3 class="text-success text-center" v-if="items.length === 0">No item in the list</h3>
 
 							<div class="row">
 								<!-- Object Style -->
@@ -50,24 +49,28 @@
 								<!-- Array Style -->
 								<!-- Favorable to toggle multiple classes (Sample: High Priority) -->
 								<div class="col-md-4 md-4" v-for="item in reversedItems">
-                                    <div class="card-item">
+                                    <div class="card-item p-2" :class="[item.purchased ? 'bg-purchased' : '']">
 										<div class="container-fluid">
 		                                	<h4 class="text-capitalize row" :class="[item.purchased ? 'strikeout' : '' , item.priority ? 'text-danger' : '']">{{ item.label }}</h4>
-		                                	<p class=" row">
-		                                		<strong>Description: </strong>
-		                                		<br/>
-		                                		{{ item.description }}
-		                                	</p>
+		                                	<div class="row item-description">
+		                                		<p :class="[item.purchased ? 'text-muted' : '']"><strong>Description: </strong>
+		                                		{{ item.description }}</p>
+		                                	</div>
 		                                	<div class="float-right">
 		                                		<button class="btn"
 													:class="[item.priority ? 'btn-danger' : '']"
 		                                			@click="togglePriority(item)">
 		                                			{{item.priority ? 'High' : 'Low'}} Priority
 		                                		</button>
-		                                		<button class="btn btn-success" @click="togglePurchased(item)">Purchase</button>
+		                                		<button class="btn" 
+													:class="[item.purchased ? 'btn-success' : '']"
+		                                			@click="togglePurchased(item)">
+		                                			Purchase
+		                                		</button>
 		                                	</div>
 										</div>	
 									</div>
+									<br/>
                                 </div>
 								<!-- gives more flexibility -->
 							</div>
@@ -89,6 +92,7 @@
 			data: {
 				header: 'shopping list',
 				state: 'default',
+				searchItem: null,
 				newItem: '',
 				newItemDescription: '',
 				items:[
@@ -114,10 +118,11 @@
 			},
 			computed: { 
 				// computed properties change data for presentation wise
-				//  Must not alteror change existing data
+				//  Must not alter or change existing data
 				reversedItems() {
 					return this.items.slice(0).reverse();
 				}
+
 			},
 			methods: {
 				saveItem: function(){
@@ -139,7 +144,7 @@
                 },
                 togglePriority: function(item) {
                     item.priority = !item.priority
-                }
+                },
 			}
 		});
 	</script>
