--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 		<div class="container-fluid">
 			<br/>
 				<div class="col-md-12">
-					<h1 class="text-uppercase">Shopping List</h1>
+					<h1 class="text-uppercase">{{header}}</h1>
 					<br/>
 
 					<div class="row">
 						<div class="col-md-6" >
 							<div class="row">
-								<Itemcard></Itemcard>
-								<Itemcard></Itemcard>
-								<Itemcard></Itemcard>	
+								<Itemcard v-for="item in items" :name="item.name" :description="item.description"></Itemcard>
 							</div>
 						</div>
 					</div>
@@ -39,16 +37,11 @@
 
 	<script type="text/x-template" id="item-card-template">
 		<div class="col-md-6">
-			<div class="card p-2">
+			<div class="card p-md-4">
 				<div class="container-fluid">
-					<h2>Title Here</h2>
+					<h3>{{name}}</h3>
 					<p class="text-secondary">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						{{description}}
 					</p>
 				</div>	
 			</div>
