--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
 					<br/>
 
 					<div class="row">
-						<div class="col-md-7" >
-							<div class="row">
-								<Itemcard v-for="item in items" :name="item.name.default" :description="item.description"></Itemcard>
-							</div>
-						</div>
+							<item-section></item-section>
 					</div>
 				</div>
 		</div>
@@ -34,6 +30,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+	<script  type="text/x-template" id="item-section-template">
+		<div class="row">
+			<Itemcard v-for="item in items" :name="item.name.default" :description="item.description"></Itemcard>
+		</div>
+	</script>	
 
 	<script type="text/x-template" id="item-card-template">
 		<div class="col-md-6">
