--- a/index.html
+++ b/index.html
@@ -1,58 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- 	<meta charset="UTF-8">
- 	<meta name="description" content="Free Web tutorials">
- 	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
- 	<meta name="author" content="John Doe">
- 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	<link rel="stylesheet" href="style.css" />
- 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<title>Shopping List App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Vue.js Components Fundamentals</title>
 </head>
+
 <body>
-	<div id="shopping-list">
-		<div class="container-fluid">
-			<br/>
-				<div class="col-md-12">
-					<h1 class="text-uppercase">{{header}}</h1>
-					<br/>
+  <div id="shopping-list" class="container mx-auto py-6">
+    <div class="content">
+      <h1 class="title">Coffee Plans</h1>
 
-					<div class="row">
-							<item-section></item-section>
-					</div>
-				</div>
-		</div>
-	</div>
-	<br/>
+      <plan-picker></plan-picker>
+    </div>
+  </div>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script type="text/x-template" id="plan-picker-template">
+    <div class="plans">
+      <plan-picker-item v-for="plan in plans" :name="plan"></plan-picker-item>
+    </div>
+  </script>
 
-	<script  type="text/x-template" id="item-section-template">
-		<div class="row">
-			<Itemcard v-for="item in items" :name="item.name.default" :description="item.description"></Itemcard>
-		</div>
-	</script>	
+  <script type="text/x-template" id="plan-picker-item-template">
+    <div class="plan">
+        <div class="description">
+          <span class="title">
+            {{name}}
+          </span>
+        </div>
+      </div>
+  </script>
 
-	<script type="text/x-template" id="item-card-template">
-		<div class="col-md-6">
-			<div class="card p-md-4">
-				<div class="container-fluid">
-					<h3>{{name}}</h3>
-					<p class="text-secondary">
-						{{description}}
-					</p>
-				</div>	
-			</div>
-			<br/>
-		</div>
-	</script>
 
-	</script>
-
-	<script src="vue.js"></script>
-	<script src="app.js"></script>
+  <script src="https://unpkg.com/vue"></script>
+  <script src="app.js"></script>
+  <link rel="stylesheet" href="style.css">
 </body>
+
 </html>
