--- a/coffee plan/index.html
+++ b/coffee plan/index.html
@@ -18,9 +18,9 @@
 
 			<div class="col-md-4">
 				<br/>
-				<h1 class="text-center font-weight-bold">Coffee Plans</h1>
+				<h1 class="text-center font-weight-bold">{{header}}</h1>
 
-					<plan-section></plan-section>
+				<plan-section></plan-section>
 			</div>
 
 		</div>
